--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ compile_commands.json
 *creator.user*
 
 *_qmlcache.qrc
+build/Dzia_aj_cy-Debug/.qmake.stash
+build/Dzia_aj_cy-Debug/debug/Protokol_Kasowy_v2.exe
